- Move the "overflow not hidden in IE9" fix from css to js, to make sure it is set if the user changes the css file - Implement mouse (touch) rectangle zoom on iOS (to be tested on Android)
git-svn-id: http://root.cern.ch/svn/root/trunk@46767 27541ba8-7e3a-0410-8455-c3a389f83636

--- a/js/JSRootIO/style/JSRootInterface.css
+++ b/js/JSRootIO/style/JSRootInterface.css
@@ -106,11 +106,6 @@ input.tb {
    background-color: #ffffff;
 }
 
-/*
- * Correct overflow not hidden in IE9
- */
-svg:not(:root) { overflow: hidden; }
-
 /*--------------------------------------------------|
 | dTree 2.05 | www.destroydrop.com/javascript/tree/ |
 |---------------------------------------------------|
